architect-con-specialty/14-ha-on-k3s/files/k3s-ha/pentaho-ha-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pentaho-server-ha
  namespace: pentaho
spec:
  selector: { app: pentaho-server-ha }
  ports:
    - port: 8080
      targetPort: 8080
